<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/pantalla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_span="2"
        android:gravity="end"
        android:text="@string/pantalla"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/tabla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/tabla"

        android:layout_width="wrap_content"
        android:layout_height="440dp"
        android:layout_marginTop="291dp"
        android:layout_marginEnd="3dp"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorPrimary"
        android:backgroundTintMode="screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seno"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/seno" />

            <Button
                android:id="@+id/coseno"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coseno" />

            <Button
                android:id="@+id/tangente"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tangente" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/grados_radianes"
                style="@android:style/Widget.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grados_radianes" />

            <Button
                android:id="@+id/borrar"
                style="@android:style/Widget.Material.Light.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrar" />

            <Button
                android:id="@+id/division"
                style="@android:style/Widget.Material.Light.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/division" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/siete"
                style="@android:style/Widget.Material.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/siete" />

            <Button
                android:id="@+id/ocho"
                style="@android:style/Widget.Material.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocho" />

            <Button
                android:id="@+id/nueve"
                style="@android:style/Widget.Material.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nueve" />

            <Button
                android:id="@+id/multiplicacion"
                style="@android:style/Widget.Material.Light.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/multiplicacion" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/cuatro"
                style="@android:style/Widget.Material.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuatro" />

            <Button
                android:id="@+id/cinco"
                style="@android:style/Widget.Material.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cinco" />

            <Button
                android:id="@+id/seis"
                style="@android:style/Widget.Material.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seis" />

            <Button
                android:id="@+id/resta"
                style="@android:style/Widget.Material.Light.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resta" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/uno"
                style="@android:style/Widget.Material.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uno" />

            <Button
                android:id="@+id/dos"
                style="@android:style/Widget.Material.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dos" />

            <Button
                android:id="@+id/tres"
                style="@android:style/Widget.Material.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tres" />

            <Button
                android:id="@+id/suma"
                style="@android:style/Widget.Material.Light.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suma" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/cero"
                style="@android:style/Widget.Material.Light.Button.Toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/cero" />

            <Button
                android:id="@+id/punto"
                style="@android:style/Widget.Material.Light.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/punto" />

            <Button
                android:id="@+id/igual"
                style="@android:style/Widget.Material.Light.Button.Inset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/igual" />
        </TableRow>
    </TableLayout>

</android.support.constraint.ConstraintLayout>